# OperatorOSPRD_BI

./: .replit  2hr_ai_consulting_emergency_plan.md  2hr_emergency_setup_plan.md  DFM_Comprehensive_Cleaned.xlsx  PowerBI_Config.json  admin.py  aggressive_revenue_plan_20k_monthly.md  ai_consulting_pricing_structure.md  ai_consulting_service_agreement.md  ai_entrepreneur_production_test.md  ai_entrepreneur_test_results.md  automated_revenue_system.py  business_bank_account_comparison.md  business_package_generator.py  c_suite_progress_report.md  cfo_financial_analysis.py  clarity_feedback.py  client_acquisition_automation.py  client_onboarding_checklist.md  complete_automation_report.md  config.py  csuite_agents.py  dashboard_automation.py  database_utils.py  deployment_cleanup_report.md  digital_product_automation.py  dynamic_agent_creator.py  enhanced_conversation_chain.py  eos_system.py  final_loop_validation_20250708.md  flow_agents.py  fulfillment_automation.py  fulfillment_system.py  human_clarity.py  intelligent_agent_router.py  intelligent_routing_test_results.md  loop_completion_report_20250708_221609.md  loop_test_20250708_215637.md  main.py  massachusetts_specific_compliance.md  (+34 more)
attached_assets/: Boston Children's Hospital - JIRA 2025-07-18T19_35_22-0400_1752882229445.csv  DFM_1752879757361.xlsx  Pasted--Add-OperatorOS-Professional-One-Pager-to-ZIP-Downloads-REPLIT-AGENT-IMPLEMENTATION-PROMPT--1752106755964_1752106755965.txt  Pasted--C-Suite-of-Agents-Implementation-Blueprint-Executive-Summary-Build-a-comprehensive-AI-execu-1752092212745_1752092212746.txt  (+29 more)
(+56 files in other folders)
