[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.2",
    "psycopg2-binary>=2.9.10",
    "validators>=0.35.0",
    "sqlalchemy>=2.0.41",
    "flask-limiter>=3.12",
    "flask-socketio>=5.5.1",
    "werkzeug>=3.1.3",
    "anthropic>=0.57.1",
    "google-generativeai>=0.8.5",
    "stripe>=12.3.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "google-genai>=1.25.0",
]
